--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -1,17 +1,39 @@
-﻿<h2>@ViewBag.Title</h2>
+﻿@model ContactViewModel
+@{
+    ViewBag.Title = "Contact Us";
+}
 
+@section Scripts{
+    <script src="~/node_modules/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+
+}
 <form method="post">
-    <label>Your Name:</label>
+    <div asp-validation-summary="ModelOnly"></div>
+
+    <label asp-for="Name">Your Name:</label>
     <br />
-    <input style="font-size: 18px;" />
+    <input asp-for="Name" />
+    <span asp-validation-for="Name"></span>
     <br />
-    <label>Email: </label>
+
+    <label asp-for="Email">Email: </label>
     <br />
-    <input type="email" />
+    <input type="email" asp-for="Email" />
+    <span asp-validation-for="Email"></span>
     <br />
-    <label>Message:</label>
+
+    <label asp-for="Subject">Subject:</label>"
     <br />
-    <textarea rows="3"></textarea>
+    <input asp-type="text" asp-for="Subject" />
+    <span asp-validation-for="Subject"></span>
+    <br />
+
+    <label asp-for="Message">Message:</label>
+    <br />
+    <textarea rows="3" asp-for="Message"></textarea>
+    <span asp-validation-for="Message"></span>
     <br />
     <input type="submit" value="Send Message" />
+    <div>@ViewBag.UserMessage</div>
 </form>
