--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -8,32 +8,40 @@
     <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 
 }
-<form method="post">
-    <div asp-validation-summary="ModelOnly"></div>
+<div class="col-md-6 offset-md-3">
+    <div class="card card-body bg-light">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly"></div>
 
-    <label asp-for="Name">Your Name:</label>
-    <br />
-    <input asp-for="Name" />
-    <span asp-validation-for="Name"></span>
-    <br />
+            <div class="form-group">
+                <label asp-for="Name">Your Name:</label>
+                <br />
+                <input asp-for="Name" class="form-control"/>
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email">Email: </label>
+                <br />
+                <input type="email" asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subject">Subject:</label>"
+                <br />
+                <input asp-type="text" asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message">Message:</label>
 
-    <label asp-for="Email">Email: </label>
-    <br />
-    <input type="email" asp-for="Email" />
-    <span asp-validation-for="Email"></span>
-    <br />
+                <textarea rows="3" asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
 
-    <label asp-for="Subject">Subject:</label>"
-    <br />
-    <input asp-type="text" asp-for="Subject" />
-    <span asp-validation-for="Subject"></span>
-    <br />
-
-    <label asp-for="Message">Message:</label>
-    <br />
-    <textarea rows="3" asp-for="Message"></textarea>
-    <span asp-validation-for="Message"></span>
-    <br />
-    <input type="submit" value="Send Message" />
+            <div class="col-md-6 offset-md-4">
+            <input type="submit" value="Send Message" class="btn btn-primary" />
+            </div>
     <div>@ViewBag.UserMessage</div>
-</form>
+    </form>
+</div>
+</div>
