--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 ﻿
 
+/*
+
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -71,4 +73,4 @@ ul.product-props li{
     }
     menu li:last-of-type{
         content:"";
-    }
+    }*/
